--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,13 @@ repos:
 - name: regulations-site
   description: Display the regulations
   url: https://github.com/cfpb/regulations-site
+- name: regulations-bootstrap
+  description: Bootstrap eRegulations
+  url: https://github.com/cfpb/regulations-bootstrap
+- name: regulations-stub
+  description: Pre-parsed regulations
+  url: https://github.com/cfpb/regulations-stub
+    
 
 # Style Variables
 brand_color: "#2cb34a"
