--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
 # Base configuration
-permalink: /:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 markdown: kramdown
 highlighter: pygments
+
+collections:
+  pages:
+    output: true
+    permalink: /:path/
 
 # Title
 name: eRegulations
