Move technical sections to their own page
This page will be expanded shortly, so it seems best to separate "eRegs the
project" from "eRegs the code". This makes navigation a bit more confusing.
May want to add sub-navigation on the second page

--- a/_config.yml
+++ b/_config.yml
@@ -34,24 +34,11 @@ navigation:
 - text: Live Instances
   url: '#live-instances'
   internal: true
-- text: Repositories
-  url: '#repositories'
-  internal: true
 - text: Features
   url: '#features'
   internal: true
-- text: Architecture
-  url: '#architecture'
-  internal: true
 - text: Technology
-  url: '#technology'
-  internal: true
-- text: Getting Started
-  url: '#getting-started'
-  internal: true
-- text: Open Source Contributing
-  url: '#open-source-and-contributing'
-  internal: true
+  url: '/technology/'
 
 
 # Repo list
