Technology is an internal link

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,8 @@ navigation:
   url: '#features'
   internal: true
 - text: Technology
-  url: '/technology/'
+  url: 'technology/'
+  internal: true
 
 
 # Repo list
