--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Base configuration
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "vendor"]
 markdown: kramdown
 highlighter: rouge
 
