--- a/_config.yml
+++ b/_config.yml
@@ -25,25 +25,28 @@ navigation:
 - text: Overview and live instances
   url: ''
   internal: true
-- text: Features
+- text: History and press
+  url: 'history/'
+  internal: true
+- text: Current features
   url: 'features/'
-  internal: true
-- text: Code and documentation
-  url: 'technology/'
-  internal: true
-- text: Theming an instance
-  url: 'theming/'
-  internal: true
-- text: History, present, and future
-  url: 'story/'
   internal: true
 - text: Introduction to regulations
   url: 'introduction/'
   internal: true
-- text: Guidelines
+- text: Code and repositories
+  url: 'technology/'
+  internal: true
+- text: Creating an eRegs instance
+  url: 'theming/'
+  internal: true
+- text: Writing rules and regulations
   url: 'guidelines/'
   internal: true
-- text: Contact and governance
+- text: Contributing and open source
+  url: 'contributing/'
+  internal: true
+- text: Contact
   url: 'contact/'
   internal: true
 
